--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,85 +1,32 @@
-:root {
-  background-color: #242424;
-  color: rgba(255, 255, 255, 87%);
-  color-scheme: light dark;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+// import dark theme
+@use "element-plus/theme-chalk/src/dark/css-vars.scss" as *;
+
+body {
+  margin: 0;
+  font-family:
+    Inter,
+    system-ui,
+    Avenir,
+    "Helvetica Neue",
+    Helvetica,
+    "PingFang SC",
+    "Hiragino Sans GB",
+    "Microsoft YaHei",
+    "微软雅黑",
+    Arial,
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-synthesis: none;
-  font-weight: 400;
-  line-height: 1.5;
-  text-rendering: optimizelegibility;
-  text-size-adjust: 100%;
 }
 
 a {
-  color: #646cff;
-  font-weight: 500;
-  text-decoration: inherit;
+  color: var(--el-color-primary);
 }
 
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  display: flex;
-  margin: 0;
-  min-block-size: 100vh;
-  min-inline-size: 320px;
-  place-items: center;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border: 1px solid transparent;
-  border-radius: 8px;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  font-family: inherit;
-  font-size: 1em;
-  font-weight: 500;
-  padding-block: 0.6em;
-  padding-inline: 1.2em;
-  transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-.card {
-  padding: 2em;
-}
-
-#app {
-  padding: 2rem;
-  margin-block: 0;
-  margin-inline: auto;
-  max-inline-size: 1280px;
-  text-align: center;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    background-color: #fff;
-    color: #213547;
-  }
-
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
-  }
+code {
+  border-radius: 2px;
+  background-color: var(--el-color-primary-light-9);
+  color: var(--el-color-primary);
+  padding-block: 2px;
+  padding-inline: 4px;
 }
