--- a/src/styles/element/index.scss
+++ b/src/styles/element/index.scss
@@ -1,21 +1,154 @@
+// theme 01
+// $--colors: (
+//   "primary": (
+//     "base": green,
+//   ),
+//   "success": (
+//     "base": #21ba45,
+//   ),
+//   "warning": (
+//     "base": #f2711c,
+//   ),
+//   "danger": (
+//     "base": #db2828,
+//   ),
+//   "error": (
+//     "base": #db2828,
+//   ),
+//   "info": (
+//     "base": #42b8dd,
+//   ),
+// );
+
+// theme2
+// $--colors: (
+//   "white": #fff,
+//   "black": #000,
+//   "primary": (
+//     "base": #4d70ff,
+//   ),
+//   "success": (
+//     "base": #67c23a,
+//   ),
+//   "warning": (
+//     "base": #e6a23c,
+//   ),
+//   "danger": (
+//     "base": #f56c6c,
+//   ),
+//   "error": (
+//     "base": #f56c6c,
+//   ),
+//   "info": (
+//     "base": #909399,
+//   ),
+// );
+
+// color system
+$blue: #1761fd !default;
+$indigo: #8405ff !default;
+$purple: #9f9dff !default;
+$pink: #fd3c97 !default;
+$red: #e36065 !default;
+$red-light: #ff9d9d !default;
+$orange: #fcb37c !default;
+$yellow: #fce07c !default;
+$green: #03daba !default;
+$teal: #03d87f !default;
+$cyan: #60c5fe !default;
+
+// primary color
+$primary: #8405ff !default;
+$secondary: #c182ff !default;
+$tertiary: #2f3342 !default;
+
+// gray
+$white: #fff !default;
+
+// $gray-100: #f5f5ff !default;
+// $gray-200: #f1f5fa !default;
+// $gray-300: #e5e4f7 !default;
+// $gray-400: #b6c2e4 !default;
+// $gray-500: #8997bd !default;
+// $gray-600: #7081b9 !default;
+// $gray-700: #303e67 !default;
+// $gray-800: #2c3652 !default;
+// $gray-900: #1d2c48 !default;
+
+// dark mode
+$gray-900: #cac5da;
+$gray-800: #a69fc1;
+$gray-700: #918ba9;
+$gray-600: #404559;
+$gray-500: #2f3342;
+$gray-400: #2c303f;
+$gray-300: #202435;
+$gray-200: #21242e;
+$gray-100: #1c1e27;
+$black: #26282d !default;
+$light: $gray-200 !default;
+$dark: $gray-900 !default;
+
+// fonts
+$font-size-base: 1rem !default;
+$font-size-lg: $font-size-base * 1.25 !default;
+$font-size-sm: $font-size-base * 0.875 !default;
+
+// $font-family-sans-serif: "Public Sans", sans-serif;
+// $font-family-monospace: "Source Code Pro", monospace;
+$font-size-xs: $font-size-base * 0.75 !default;
+
+// border radius
+$border-radius: 0.25rem !default;
+$border-radius-lg: 0.5rem !default;
+$border-radius-sm: 0.15rem !default;
+
+// layout
+$menu-width: 268px !default;
+$spacer: 1rem !default;
+
+// body
+$body-color: $gray-800 !default;
+$border-color: $gray-300 !default;
+$body-bg: $gray-100 !default;
+$card-bg: $white !default;
+$input-bg: $white !default;
+$link-color: $primary !default;
+
+// border radius
+$border-radius: 0.25rem !default;
+$border-radius-sm: 0.15rem !default;
+
+// shadow
+$box-shadow-sm: 0 0.125rem 0.25rem rgba($black, 0.075);
+$box-shadow: 0 0.5rem 1rem rgba($black, 0.15);
+$box-shadow-lg: 0 1rem 3rem rgba($black, 0.175);
+
+// boostrap flags
+$enable-reduced-motion: false;
+
+// element-plus
+$types: primary, success, warning, danger, error, info !default;
 $--colors: (
+  "white": $white,
+  "black": $black,
   "primary": (
-    "base": green,
+    "base": $primary,
   ),
   "success": (
-    "base": #21ba45,
+    "base": $green,
   ),
   "warning": (
-    "base": #f2711c,
+    "base": $orange,
   ),
   "danger": (
-    "base": #db2828,
+    "base": $red,
   ),
   "error": (
-    "base": #db2828,
+    "base": $red,
   ),
   "info": (
-    "base": #42b8dd,
+    "base": $cyan,
   ),
 );
 
@@ -27,9 +160,28 @@ $--colors: (
 // You should use them in scss, because we calculate it by sass.
 // comment next lines to use default color
 @forward "element-plus/theme-chalk/src/common/var.scss" with (
-  // do not use same name, it will override.
+  // $font-family: (
+  //   "":  $font-family-sans-serif,
+  //   "monospace": $font-family-monospace,
+  // ),
+
+  $font-size: (
+    "extra-large": $font-size-base * 1.5,
+    "large": $font-size-lg,
+    "medium": $font-size-base * 1.15 ,
+    "base": $font-size-base,
+    "small": $font-size-sm,
+    "extra-small": $font-size-xs,
+  ),
+
   $colors: $--colors,
-  $button-padding-horizontal: ("default": 50px)
+  $button-padding-horizontal: ("default": 50px),
+
+  $border-radius: (
+    "base": $border-radius,
+    "small": $border-radius-sm,
+    "round": $border-radius-lg,
+  ),
 );
 @debug $--colors;
 
