--- a/src/styles/titlebar.scss
+++ b/src/styles/titlebar.scss
@@ -16,6 +16,11 @@ $titlebar-actions-height: 30px;
   padding-block: 0;
   padding-inline: variables.$gutter-h;
 
+  & window-title {
+    -webkit-app-region: drag;
+    user-select: none;
+  }
+
   // app icon
   &-icon {
     position: absolute;
