--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,7 +2,7 @@
 @use "element-plus/theme-chalk/src/dark/css-vars.scss" as *;
 
 // @use "./element/dark.scss" as *;
-@use "titlebar.scss";
+// @use "titlebar.scss";
 @use "./test" as *;
 
 :root {
