--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,7 @@
 @use "./element/index" as el;
 
 // Theme
+$theme-bg: #181818 !default;
 $theme-base: #fff !default;
 
 // $theme-primary: #fad83b !default;
@@ -11,7 +12,11 @@ $theme-secondary: #4ad0ff !default;
 
 // Colors
 $text-dark: rgba($theme-base, 0.87) !default;
+$text: rgba($theme-base, 0.67) !default;
 $text-light: rgba($theme-base, 0.57) !default;
+$text-lighter: rgba($theme-base, 0.37) !default;
+$text-hint: rgba($theme-base, 0.37) !default;
+$text-disabled: rgba($theme-base, 0.37) !default;
 
 // brand colors
 $brand-info: $theme-secondary !default;
@@ -26,3 +31,6 @@ $gutter-w: 0.8rem;
 $gutter-h: 0.4rem;
 $ng-gutter-h: -0.4rem;
 $titlebar-bg: transparent !default;
+
+// App
+$border-color: rgba($theme-base, 0.1) !default;
