--- a/src/styles/app-menu.scss
+++ b/src/styles/app-menu.scss
@@ -1,4 +1,5 @@
 /* stylelint-disable liberty/use-logical-spec */
+@use "sass:color" as color;
 @use "./variables.scss" as *;
 @use "./titlebar.scss" as *;
 
@@ -10,7 +11,7 @@
     padding: $gutter-h 0;
     border-radius: 6px;
     margin: 0;
-    background: lighten($theme-bg, 5%);
+    background: color.scale($theme-bg, $lightness: 5%);
     box-shadow:
       0 0 0 1px rgba(black, 0.06),
       0 1px 2px rgba(black, 0.08),
@@ -107,33 +108,19 @@
       > ul {
         top: 0;
         left: 100%;
-
-        // display: block;
         display: none;
       }
     }
   }
 
   &.active {
-    ul {
-      &:has(li.menu-item.hovered) {
-        // top: 0;
-        // left: 100%;
+    li.menu-item.hovered {
+      > ul {
+        top: 0;
+        left: 100%;
         display: block;
       }
     }
-
-    // li.menu-item.hovered {
-    //   @at-root #{&} ul {
-    //     display: block;
-    //   }
-
-    //   > ul {
-    //     top: 0;
-    //     left: 100%;
-    //     display: block;
-    //   }
-    // }
   }
 
   // First Level Menu
